bug-bounty/dev-bug-bounty-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-dev-bug-bounty
spec:
  rules:
  - host: bounty.staging.nervos.org
    http:
      paths:
      - path: /
        backend:
          serviceName: service-dev-bug-bounty
          servicePort: 80
