bug-bounty/prod-bug-bounty-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-prod-bug-bounty
spec:
  rules:
  - host: bounty.nervos.org
    http:
      paths:
      - path: /
        backend:
          serviceName: service-prod-bug-bounty
          servicePort: 80
